--- a/Kodak/public/css/admin.css
+++ b/Kodak/public/css/admin.css
@@ -88,7 +88,7 @@ html{
 
 .sticky{
   background-color: #fff;
-  padding: 18px 0;
+  padding: 1px 0;
 }
 
 .sticky .navbar-menu a{
@@ -271,11 +271,27 @@ section.dark .section-title::after{
   margin-bottom: 6px;
 }
 
-.service:hover{
-  background-color: #48dbfb;
+.service:hover .icon{
+  color: #fff;
 }
 
-.service:hover .icon{
+.services .buttonserv a{
+  display: inline-block;
+  margin: 15px 30px;
+  color: #48dbfb;
+  font-size: 15px;
+  font-weight: 500;
+  width: 100px;
+  border: 1px solid #48dbfb;
+  padding: 14px 0;
+  border-radius: 6px;
+  transition: .2s linear;
+}
+
+.services .buttonserv a:hover,
+.services .buttonserv a:nth-child(2)
+{
+  background-color: #48dbfb;
   color: #fff;
 }
 
@@ -688,14 +704,14 @@ textarea.contact-form-text{
 }
 
 .pricing-table{
-  background: #f1f1f1;
+  background: inherit;
   flex: 1;
   margin: 10px;
   text-transform: uppercase;
 }
 
 .pricing-header{
-  color: #fff;
+  color: inherit;
   position: relative;
   margin-bottom: 20px;
 }
@@ -778,7 +794,7 @@ textarea.contact-form-text{
 }
 
 .table3 .pricing-header{
-  background: #c0392b;
+  background: inherit;
 }
 
 .table3 .title{
@@ -815,7 +831,7 @@ label {
 footer{
   background-image: linear-gradient(125deg,#2c3e50, #1b5134, #0b151c, #0a2432,#8e44ad);
   color: #fff;
-  padding: 80px 0;
+  padding: 15px 0;
   text-align: center;
 }
 
@@ -919,4 +935,67 @@ footer{
   }
 }
 
+.about-section{
+  background-size: 55%;
+  background-color: #fdfdfd;
+  overflow: hidden;
+  padding: 100px 0;
+}
+
+.inner-container{
+  width: 55%;
+  float: right;
+  background-color: #fdfdfd;
+  padding: 150px;
+}
+
+.inner-container h3{
+  margin-bottom: 30px;
+  font-size: 30px;
+  font-weight: 900;
+  color: black;
+}
+
+.text{
+  font-size: 13px;
+  color: #545454;
+  line-height: 30px;
+  text-align: justify;
+  margin-bottom: 40px;
+}
+
+.skills{
+  display: flex;
+  justify-content: space-between;
+  font-weight: 700;
+  font-size: 13px;
+  color: black;
+}
+
+@media screen and (max-width:1200px){
+  .inner-container{
+    padding: 80px;
+  }
+}
+
+@media screen and (max-width:1000px){
+  .about-section{
+    background-size: 100%;
+    padding: 100px 40px;
+  }
+
+  .inner-container{
+    width: 100%;
+  }
+}
+
+@media screen and (max-width:600px){
+  .about-section{
+    padding: 0;
+  }
+
+  .inner-container{
+    padding: 60px;
+  }
+}
 
